# espac

./: .gitmodules
firmware/: .gitignore  CMakeLists.txt  Cargo.toml  env.bat  platformio.ini  sdkconfig  sdkconfig.old
firmware/.cargo/: config.toml
firmware/components/ui/: CMakeLists.txt  bridge.cpp  bridge.h  enums.h  events.h  idf_component.yml  iui_main.h  ui_main.cpp  ui_main.h  utils.cpp  utils.h
firmware/components/ui/assets/fonts/: fonts.h  poppins_semibold_68.h
firmware/components/ui/assets/images/: freeze.c  images.h
firmware/components/ui/structure/: main_event_bus.cpp  main_event_bus.h  menu_view_base.cpp  menu_view_base.h  view.cpp  view.h  view_base.cpp  view_base.h  view_orchestrator.cpp  view_orchestrator.h
firmware/components/ui/views/: mode_menu_view.cpp  mode_menu_view.h  settings_menu_view.cpp  settings_menu_view.h  thermostat_overlay_menu_view.cpp  thermostat_overlay_menu_view.h  thermostat_view.cpp  thermostat_view.h  view.h  views.h
firmware/lib/peripheral-bindings/: Cargo.toml  build.rs
firmware/main/: CMakeLists.txt  display.cpp  display.h  idf_component.yml  main.cpp  pins.h
firmware/main/drivers/: bridge_driver.cpp  bridge_driver.h
firmware/main/drivers/display/: driver.cpp  driver.h
firmware/src/: lib.rs
hardware/: .gitignore  espac.kicad_pcb  espac.kicad_prl  espac.kicad_pro  espac.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~espac.kicad_sch.lck
hardware/3d-print/: bottom1.stl  demo-outer-v2.stl  inner-v10.stl  inner-v11.stl  inner-v4.stl  inner-v6.stl  inner-v7.stl  inner-v8.stl  inner-v9.stl  rev2-bottom.stl  rev2-top.stl  top1.stl
hardware/espac-screen/: espac-screen - Copia.cad  espac-screen - Copia.kicad_pcb  espac-screen - Copia.step  espac-screen - Copia.wrl  espac-screen.kicad_pcb  espac-screen.kicad_prl  espac-screen.kicad_pro  espac-screen.kicad_sch  espac-screen.step
hardware/kicad-library/1734839-8/: 1734839-8.step
hardware/kicad-library/TL3330AF130QG.3dshapes/: SW_TL3330AF130QG_EWI.kicad_mod
hardware/kicad-library/TL3330AF130QG.pretty/: SW_TL3330AF130QG_EWI.kicad_mod
hardware/kicad-library/sk6812.pretty/: SK6812-SIDE-A.kicad_mod
hardware/kicad-library/temt6000/: TEMT6000.kicad_mod
