[workspace]
members = ["lib/peripheral-bindings"]

[package]
name = "firmware"
edition = "2021"
version = "0.1.0"

[lib]
path = "src/lib.rs"
name = "firmware"
edition = "2021"
crate-type = ["staticlib"]
required-features = []

[dependencies]
esp-idf-svc = "0.48.1"
peripheral-bindings = { path = "./lib/peripheral-bindings" }
