[package]
name = "peripheral-bindings"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "peripheral_bindings"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
embuild = "0.31.4"
bindgen = "0.63.0"